--- a/index.html
+++ b/index.html
@@ -1,92 +1,60 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 
 <head>
-    <title>大学生自我介绍</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+	<meta charset="utf-8">
+	<title>网站首页</title>
+	<link href="CSS/index.2.css" type="text/css" rel="stylesheet">
+	<link href="CSS/index.1.css" type="text/css" rel="stylesheet">
+	<link href="CSS/index.3.css" type="text/CSS" rel="stylesheet">
+
 </head>
 
 <body>
-    <header>
-        <h1>大学生自我介绍</h1>
-    </header>
-    <main>
-        <section>
-            <h2>个人信息</h2>
-            <div class="profile"> <img src="images/01.jpg" alt="个人照片">
-                <table>
-                    <tr>
-                        <th>姓名:</th>
-                        <td>祝鹏</td>
-                    </tr>
-                    <tr>
-                        <th>年龄:</th>
-                        <td>22岁</td>
-                    </tr>
-                    <tr>
-                        <th>性别:</th>
-                        <td>男</td>
-                    </tr>
-                    <tr>
-                        <th>专业:</th>
-                        <td>计算机科学与技术</td>
-                    </tr>
-                    <tr>
-                        <th>学校:</th>
-                        <td>四川轻化工大学</td>
-                    </tr>
-                </table>
-            </div>
-        </section>
-        <section>
-            <h2>教育经历</h2>
-            <table>
-                <tr>
-                    <th>时间</th>
-                    <th>学校</th>
-                    <th>专业</th>
-                </tr>
-                <tr>
-                    <td>2020-2023</td>
-                    <td>轻化工大学</td>
-                    <td>计算机科学与技术</td>
-                </tr>
-                <tr>
-                    <td>2018-2020</td>
-                    <td>南部中学</td>
-                    <td>高中</td>
-                </tr>
-            </table>
-        </section>
-        <section>
-            <h2>技能</h2>
-            <table>
-                <tr>
-                    <th>技能名称</th>
-                    <th>熟练程度</th>
-                </tr>
-                <tr>
-                    <td>C语言</td>
-                    <td>了解</td>
-                </tr>
-                <tr>
-                    <td>HTML、CSS、JavaScript等前端技术</td>
-                    <td>了解</td>
-                </tr>
-                <tr>
-                    <td>数据库相关知识</td>
-                    <td>了解</td>
-                </tr>
-            </table>
-        </section>
-        <section>
-            <h2>兴趣爱好</h2>
-            <p>喜欢打篮球、看电影、听音乐</p>
-        </section>
-    </main>
-    <footer>
-        <p>联系方式：1271354076@qq.com</p>
-    </footer>
+	<div id="top">
+		<p>
+			<font color="#FFFFFF">库洛米</font>
+		</p>
+	</div>
+	<div id="m">
+		<ul>
+			<li><a href="index.html">网站首页</a></li>
+			<li><a href="role.html">人物简介</a></li>
+			<li><a href="author.html">作者简介</a></li>
+		</ul>
+	</div>
+	<div id="c">
+		<div id="ctop">
+			<ul id="imglist">
+				<li><img src="images/top.jpg" class="ctop"></li>
+				<li><img src="images/巴库.jpg" class="ctop"></li>
+				<li><img src="images/库洛米.jpg" class="ctop"> </li>
+				<li><img src="images/库洛米cr.jpg" class="ctop"></li>
+				<li><img src="images/top.jpg" class="ctop"></li>
+			</ul>
+		</div>
+		<script src="./JS/index.js">
+
+		</script>
+		<div id="cl">
+			<ul>
+				<img src="images/库洛米cl.jpg" class="cl" />
+				<h1><a href="role.html">人物简介</a></h1>
+				<p>库洛米（Kuromi）：因为小时候经常被Melody不自觉中欺负，所以一直很讨厌Melody，而且将Melody欺负她的事写在她的可罗米笔记。是马里兰乐园的通缉犯，经常被人叫作“黑头巾小朋友”。她有一只叫巴库的助手，一起致力为柊惠一收集黑色音符。非常非常喜欢柊惠一，经常幻想自己与柊惠一未来的生活。
+				</p>
+			</ul>
+		</div>
+		<div id="cr">
+			<ul>
+				<img src="images/库洛米cr.jpg" class="cr" />
+				<h1><a href="author.html">作者简介</a></h1>
+				<p>《奇幻魔法melody》，是一部以Sanrio旗下的My Melody玩偶作基础的日本动画，由
+					Comet工作室制作。片中囚犯可罗米从马里兰乐园的牢狱逃出来，带着旋律钥匙来到了人间世界。被皇室误会帮助可罗米逃狱的Melody，被国王派去人间世界阻止可罗米夺去人类的梦想，并赐予Melody旋律指挥棒以收集一百个粉红音符，就这样开始了人间之旅。
+				</p>
+			</ul>
+		</div>
+	</div>
+	<div id="b"></div>
 </body>
 
 </html>
